--- a/app/src/main/res/layout/activity_my_electronic.xml
+++ b/app/src/main/res/layout/activity_my_electronic.xml
@@ -6,4 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".myAds.myElectronic">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/AdListRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </androidx.recyclerview.widget.RecyclerView>
 </androidx.constraintlayout.widget.ConstraintLayout>
