--- a/app/src/main/res/layout/activity_electronics.xml
+++ b/app/src/main/res/layout/activity_electronics.xml
@@ -136,44 +136,35 @@
 
     <ImageView
             android:id="@+id/img2"
-            android:layout_width="86dp"
-            android:layout_height="81dp"
-
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.504"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/UploadImageButton"
-            app:srcCompat="@drawable/ic_launcher_foreground" />
+            app:layout_constraintTop_toBottomOf="@+id/UploadImageButton" />
 
     <ImageView
             android:id="@+id/img1"
-            android:layout_width="86dp"
-            android:layout_height="81dp"
-
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
-            android:contentDescription="TODO"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="@+id/img2"
             app:layout_constraintEnd_toStartOf="@+id/img2"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/img2"
-            app:srcCompat="@drawable/ic_launcher_foreground" />
+            app:layout_constraintTop_toTopOf="@+id/img2"/>
 
     <ImageView
             android:id="@+id/img3"
-            android:layout_width="86dp"
-            android:layout_height="81dp"
-
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginEnd="34dp"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="@+id/img2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/img2"
-            app:layout_constraintTop_toTopOf="@+id/img2"
-            app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/ic_launcher_foreground" />
+            app:layout_constraintTop_toTopOf="@+id/img2" />
 
     <Button
         android:id="@+id/postButton"
