--- a/app/src/main/res/layout/activity_my_electronic.xml
+++ b/app/src/main/res/layout/activity_my_electronic.xml
@@ -6,12 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".myAds.myElectronic">
 
+    <TextView
+        android:id="@+id/noAdsTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No Ads to Dispaly"
+        android:textSize="30sp"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+         />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/AdListRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
