--- a/app/src/main/res/layout/activity_list_ad.xml
+++ b/app/src/main/res/layout/activity_list_ad.xml
@@ -6,6 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".ListAd">
 
+    <TextView
+        android:id="@+id/noAdsTV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No Ads to Dispaly"
+        android:textSize="30sp"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/AdListRecyclerView"
         android:layout_width="match_parent"
