--- a/app/src/main/res/layout/activity_others.xml
+++ b/app/src/main/res/layout/activity_others.xml
@@ -6,50 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".AdCategory.otherAds">
 
-
-    <!--
-        <LinearLayout
-            android:id="@+id/linearLayout2"
-            android:layout_width="221dp"
-            android:layout_height="200dp"
-            android:layout_marginTop="20dp"
-            android:orientation="vertical"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <EditText
-                android:id="@+id/model"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10"
-                android:hint="Model"
-                android:inputType="textPersonName" />
-
-
-            <EditText
-                android:id="@+id/sellingPrice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10"
-                android:hint="Selling Price"
-                android:inputType="number" />
-
-
-            <EditText
-                android:id="@+id/description"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10"
-
-                android:hint="Description"
-                android:inputType="textPersonName" />
-
-        </LinearLayout>
--->
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
@@ -73,7 +29,7 @@
                 android:layout_weight="1"
                 android:ems="10"
                 android:hint="Brand"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName|textCapSentences" />
 
             <EditText
                 android:id="@+id/model"
@@ -82,7 +38,7 @@
                 android:layout_weight="1"
                 android:ems="10"
                 android:hint="Model"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName|textCapSentences" />
         </LinearLayout>
 
 
@@ -114,83 +70,93 @@
             android:layout_weight="1"
             android:ems="10"
             android:hint="Description"
-            android:inputType="textMultiLine" />
+            android:inputType="textMultiLine|textCapSentences" />
 
     </LinearLayout>
 
-
-
-    <ImageView
-            android:id="@+id/img2"
-            android:layout_width="86dp"
-            android:layout_height="81dp"
-
-            android:layout_marginTop="12dp"
-            android:visibility="invisible"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.504"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/UploadImageButton"
-            app:srcCompat="@drawable/ic_launcher_foreground" />
+    <LinearLayout
+        android:id="@+id/imgLL"
+        android:layout_marginTop="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/UploadImageButton">
 
         <ImageView
             android:id="@+id/img1"
-            android:layout_width="86dp"
-            android:layout_height="81dp"
-
-            android:layout_marginStart="30dp"
-            android:contentDescription="TODO"
+            android:layout_width="0dp"
+            android:layout_height="130dp"
             android:visibility="invisible"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="5dp"
+            android:layout_weight="1"
             app:layout_constraintBottom_toBottomOf="@+id/img2"
             app:layout_constraintEnd_toStartOf="@+id/img2"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/img2"
-            app:srcCompat="@drawable/ic_launcher_foreground" />
+            app:layout_constraintTop_toTopOf="@+id/img2"/>
+
+        <ImageView
+            android:id="@+id/img2"
+            android:layout_width="0dp"
+            android:layout_height="130dp"
+            android:layout_weight="1"
+            android:layout_marginHorizontal="5dp"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/UploadImageButton" />
 
         <ImageView
             android:id="@+id/img3"
-            android:layout_width="86dp"
-            android:layout_height="81dp"
-
-            android:layout_marginEnd="34dp"
+            android:layout_width="0dp"
+            android:layout_height="130dp"
+            android:layout_weight="1"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="10dp"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="@+id/img2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/img2"
-            app:layout_constraintTop_toTopOf="@+id/img2"
-            app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/ic_launcher_foreground" />
+            app:layout_constraintTop_toTopOf="@+id/img2" />
+
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/postButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="post"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="25dp"
         android:text="Post"
-        app:layout_constraintEnd_toEndOf="@+id/img2"
-        app:layout_constraintStart_toStartOf="@+id/img2"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        android:paddingHorizontal="40dp"
+        android:paddingVertical="10dp"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imgLL" />
 
     <Button
-            android:id="@+id/UploadImageButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:onClick="ChooseImage"
-            android:text="Upload Image"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+        android:id="@+id/UploadImageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:onClick="ChooseImage"
+        android:text="Upload Image"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 
     <TextView
-            android:id="@+id/textView8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:text="(2-3 Images)"
-            app:layout_constraintBottom_toBottomOf="@+id/UploadImageButton"
-            app:layout_constraintStart_toEndOf="@+id/UploadImageButton" />
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:text="(2-3 Images)"
+        app:layout_constraintBottom_toBottomOf="@+id/UploadImageButton"
+        app:layout_constraintStart_toEndOf="@+id/UploadImageButton" />
 
 
 
