--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,13 +7,23 @@
     android:background="@drawable/backgroundapp"
     tools:context=".LoginActivity">
 
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@mipmap/ic_manit_logo" />
+
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/EmailLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="250dp"
         android:layout_height="75dp"
-        android:layout_marginTop="180dp"
+        android:layout_marginTop="30dp"
         android:hint="@string/Email"
         android:textColorHint="#ffffff"
         app:boxStrokeColor="@color/colorAccent"
@@ -22,13 +32,13 @@
         app:hintTextColor="#ffffff"
         app:layout_constraintEnd_toEndOf="@+id/passwordLayout"
         app:layout_constraintStart_toStartOf="@+id/passwordLayout"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/logo">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTextEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/berkshire_swash"
+            android:fontFamily="@font/lora_regular"
             android:inputType="textEmailAddress"
             android:textColor="#FFFFFF" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -54,7 +64,7 @@
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/berkshire_swash"
+            android:fontFamily="@font/lora_regular"
             android:inputType="textPassword"
             android:textColor="#FFFFFF" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -103,6 +113,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/googleLoginBtn" />
+
+
 
     <!--LOGIN BUTTON-->
 
