--- a/app/src/main/res/layout/row_data.xml
+++ b/app/src/main/res/layout/row_data.xml
@@ -26,12 +26,11 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
-            android:id="@+id/adWishListBtn"
+            android:id="@+id/adSoldBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             android:elevation="2dp"
-            android:visibility="invisible"
             android:src="@drawable/ic_star_border_black_24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
@@ -122,6 +121,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_gravity="end"
                     android:layout_weight="1"
+                    android:visibility="invisible"
                     android:textSize="10sp"
                     android:text=""
                     />
