--- a/app/src/main/res/layout/row_data.xml
+++ b/app/src/main/res/layout/row_data.xml
@@ -66,6 +66,7 @@
                 android:id="@+id/adImageView"
                 android:layout_width="180dp"
                 android:layout_height="150dp"
+                android:layout_margin="2dp"
                 android:layout_weight="0"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -82,10 +83,12 @@
 
                 <TextView
                     android:id="@+id/AdProdModel"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:gravity="start"
+                    android:maxLines="1"
+                    android:ellipsize="end"
                     android:text="Model"
                     android:textSize="24sp"
                     android:textStyle="bold"
@@ -99,6 +102,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:gravity="start"
+                    android:maxLines="1"
+                    android:ellipsize="end"
                     android:text="Brand"
                     android:textSize="18sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -125,6 +130,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:maxLines="1"
+                        android:ellipsize="end"
                         android:gravity="start"
                         android:text="9999"
                         android:textSize="30sp" />
