--- a/app/src/main/res/layout/activity_list_ad.xml
+++ b/app/src/main/res/layout/activity_list_ad.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListAd">
+    tools:context=".displayAds.ListAd">
 
     <include
         android:id="@+id/top"
