--- a/app/src/main/res/layout/row_data.xml
+++ b/app/src/main/res/layout/row_data.xml
@@ -40,6 +40,21 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/verified"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:elevation="2dp"
+            android:gravity="center"
+            android:text="Verification in Progress"
+            android:fontFamily="@font/berkshire_swash"
+            android:textColor="#F85959"
+            android:textSize="30sp"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="@+id/linearLayout4"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
             android:id="@+id/adSoldBtn"
@@ -139,6 +154,28 @@
                 </LinearLayout>
                 <TextView
                     android:id="@+id/AdProdId"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_gravity="end"
+                    android:layout_weight="1"
+                    android:visibility="invisible"
+                    android:textSize="10sp"
+                    android:text=""
+                    />
+                <TextView
+                    android:id="@+id/adType"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_gravity="end"
+                    android:layout_weight="1"
+                    android:visibility="invisible"
+                    android:textSize="10sp"
+                    android:text=""
+                    />
+                <TextView
+                    android:id="@+id/uadType"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_marginTop="8dp"
